--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">\zenoamaro\react-quill
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enugu Electricity Distribution Company</title>
-    <link rel="icon" href="eedc.png">
-    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="./eedc.png">
+    <link rel="stylesheet" href="./index.css">
     <!-- <link rel="stylesheet" href="index.css"> -->
     <script src="https://kit.fontawesome.com/d8ebe6d82c.js" crossorigin="anonymous"></script>
 </head>
