--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enugu Electricity Distribution Company</title>
-    <link rel="icon" href="./eedc.png">
+    <!-- <link rel="favicon" href="./eedc.png"> -->
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./index.css">
     <!-- <link rel="stylesheet" href="index.css"> -->
     <script src="https://kit.fontawesome.com/d8ebe6d82c.js" crossorigin="anonymous"></script>
